--- a/styles/banner.css
+++ b/styles/banner.css
@@ -1,5 +1,5 @@
 .hero-section {
-    background: url('../B13-A01-Knowledge-Vault/assets/hero-bg.png') no-repeat center center;
+    background: url('../B13-A01-Knowledge-Vault/assets/hero-bg.png') no-repeat center top;
     background-size: cover;
     width: 100%;
     height: 674px; 
